--- a/styles/company.module.css
+++ b/styles/company.module.css
@@ -111,6 +111,7 @@
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .carusel {
@@ -149,7 +150,55 @@
         gap: 1.7%;
         row-gap: 1rem;
         flex-wrap: wrap;
+        width: 100%;
     }
+}
+
+@media screen and (max-width:1200px) {
+    .container {
+        width: 100%;
+        padding: 10px 10px;
+        margin: auto;
+        justify-content: center;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .companyTitle {
+        width: 100%;
+    }
+
+}
+
+
+@media screen and (max-width:1020px) {
+    .container {
+        width: 100%;
+        padding: 10px 10px;
+        margin: auto;
+        justify-content: center;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .companyTitle {
+        width: 90%;
+    }
+
+    .card {
+        gap: 1%;
+        row-gap: 1rem;
+        flex-wrap: wrap;
+    }
+
+    .carusel {
+        width: 100%;
+    }
+
 }
 
 @media screen and (max-width:768px) {
@@ -162,21 +211,9 @@
     }
 }
 
-@media screen and (max-width:480px) {
-    .container {
+@media screen and (max-width:760px) {
+    .container{
         width: 100%;
-    }
-
-
-    .card {
-        display: flex;
-        gap: 1.7%;
-        row-gap: 1rem;
-        flex-wrap: wrap;
-    }
-
-    .card a {
-        width: 49% !important;
     }
 
     .companyTitle {
@@ -216,11 +253,39 @@
     .companyDescrip p:nth-child(2) {
         font-size: 14px;
     }
+
+    .card {
+        gap: 1.8%;
+        row-gap: 1rem;
+        flex-wrap: wrap;
+    }
+
+    
+    .card a {
+        width: 46% !important;
+    }
 }
 
 
+@media screen and (max-width:530px) {
+    .card {
+        display: flex;
+        gap: 1.7%;
+        row-gap: 1rem;
+        flex-wrap: wrap;
+        width: 100%;
 
-@media screen and (max-width:360px) {
+    }
+
+    .card a {
+        width: 100% !important;
+    }
+
+
+} 
+
+
+@media screen and (max-width:480px) {
     .container {
         width: 100%;
     }
@@ -229,6 +294,105 @@
         display: flex;
         gap: 1.7%;
         row-gap: 1rem;
+        flex-wrap: wrap;
+        width: 100%;
+
+    }
+
+
+    .companyTitle {
+        width: 100%;
+        padding: 8px 10px;
+    }
+
+    .profile h1 {
+        font-weight: 700;
+        font-size: 13px;
+    }
+
+    .profile p {
+        font-size: 12px;
+    }
+
+    .companyProfile button {
+        padding: 8px 35px;
+        background: #E4B717;
+        box-shadow: 0px 1px 17px rgba(228, 183, 23, 0.25);
+        border-radius: 50px;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 160%;
+        color: #FFFFFF;
+    }
+
+    .profileSection {
+        gap: 10px;
+    }
+
+    .companyDescrip {
+        margin-top: 15px;
+        font-size: 12px;
+    }
+
+    .companyDescrip p:nth-child(2) {
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (max-width:475px) {
+    
+    .companyTitle {
+        width: 100%;
+        padding: 8px 10px;
+    }
+
+    .profile h1 {
+        font-weight: 700;
+        font-size: 11px;
+    }
+
+    .profile p {
+        font-size: 11px;
+    }
+
+    .companyProfile button {
+        padding: 8px 18px;
+        background: #E4B717;
+        box-shadow: 0px 1px 17px rgba(228, 183, 23, 0.25);
+        border-radius: 50px;
+        font-weight: 700;
+        font-size: 11px;
+        line-height: 160%;
+        color: #FFFFFF;
+    }
+
+    .profileSection {
+        gap: 5px;
+    }
+
+    .companyDescrip {
+        margin-top: 15px;
+        font-size: 14px;
+    }
+
+    .companyDescrip p:nth-child(2) {
+        font-size: 13px;
+    }
+}
+
+
+
+@media screen and (max-width:380px) {
+    .container {
+        width: 100%;
+    }
+
+    .card {
+        display: flex;
+        gap: 1.7%;
+        row-gap: 1rem;
+        width: 100%;
         flex-wrap: wrap;
     }
 
