--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -75,7 +75,7 @@
 
 @media screen and (max-width:1180px) {
   .container {
-    width: 1000px;
+    width: 100%;
     padding: 12px 10px;
     display: flex;
     justify-content: space-between;
