--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -115,6 +115,7 @@
 
 .inputSection {
     margin-top: 18.69px;
+    justify-content: center;
 }
 
 .input {
@@ -122,6 +123,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: fit-content;
+    margin: auto;
 }
 
 .input p {
@@ -206,6 +209,73 @@
     }
 }
 
+@media screen and (max-width:1200px) {
+    .profileTitle {
+        width: 100%;
+    }
+
+    .ProfileSection {
+        width: 100%;
+        padding: 10px 10px;
+    }
+
+    .input {
+        margin-top: 10px;
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .profileUpload {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .input input {
+        padding: 16px 28px;
+        width: 336px;
+        height: 49px;
+        background: #EFEFEF;
+        border-radius: 50px;
+        border: none;
+        font-weight: 400;
+        font-size: 17px;
+    }
+
+    .input p {
+        font-size: 15px;
+    }
+
+    .profileButton {
+        margin-left: 2px;
+        margin-top: 40px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+
+    .profileButton button {
+        padding: 15px 39px;
+        border: 1px solid #E4B717;
+        filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
+        border-radius: 50px;
+        background: none;
+        cursor: pointer;
+        color: #E4B717;
+        transition: .2s ease;
+        font-weight: 700;
+        font-size: 14.5px;
+    }
+
+        
+    .profileRight {
+        height: 600px;
+        padding: 27px 0px;
+    }
+
+}
+
 @media screen and (max-width:768px) {
     .profileTitle {
         width: 100%;
@@ -230,9 +300,6 @@
         justify-content: center;
     }
 
-    .inputSection {
-        margin-left: 55px;
-    }
 
     .input input {
         padding: 16px 28px;
@@ -278,6 +345,35 @@
 
 }
 
+@media screen and (max-width:750px) {
+    .profileTitle {
+        width: 100%;
+        padding: 10px 10px;
+    }
+
+    .profileBurger {
+        display: block;
+    }
+
+    .profileRight {
+        width: 100%;
+    }
+
+    .profileCard {
+        display: none;
+    }
+
+    .profileClose {
+        display: none;
+    }
+
+    .ProfileSection {
+        gap: 0;
+    }
+
+
+}
+
 @media screen and (max-width:480px) {
     .profileTitle {
         width: 100%;
@@ -302,9 +398,21 @@
     .ProfileSection {
         gap: 0;
     }
+
+    
+    .input input {
+        padding: 16px 28px;
+        width: 336px;
+        height: 49px;
+        background: #EFEFEF;
+        border-radius: 50px;
+        border: none;
+        font-weight: 400;
+        font-size: 17px;
+    }
 }
 
-@media screen and (max-width:360px) {
+@media screen and (max-width:380px) {
     .profileTitle {
         width: 100%;
     }
@@ -315,10 +423,6 @@
 
     .ProfileSection {
         gap: 0;
-    }
-
-    .inputSection {
-        margin-left: 20px;
     }
 
     .input input {
