--- a/styles/chat.module.css
+++ b/styles/chat.module.css
@@ -8,20 +8,24 @@
 }
 
 .chat {
-  width: 770px;
-  height: 627px;
-  border-radius: 20px;
+  width: 100%;
+  height: 100%;
   box-shadow: 0px 1px 17px rgba(117, 117, 117, 0.25);
-  border-radius: 20px;
-  position: absolute;
+  position: fixed;
   background: #FAF8F8;
   z-index: 1000;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
 }
 
 .left {
     width: 62%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 .right {
@@ -57,7 +61,7 @@
     display: flex;
     padding: 10px;
     justify-content: flex-end;
-    height: 78%;
+    height: 87%;
     flex-direction: column;
 }
 
@@ -82,6 +86,7 @@
     border-radius: 20px 20px 0 20px;
     background: #E4B717;
     color: #fff;
+    font-size: 17px;
     box-shadow: 0px 1px 17px rgba(117, 117, 117, 0.04);
 }
 
@@ -95,6 +100,11 @@
     justify-content: space-between;
     align-items: center;
     color: #888888;
+    font-size: 11px;
+}
+
+.createdAt > img {
+    height: 15px;
 }
 
 .sendMessage {
@@ -147,4 +157,13 @@
 .eachChat:first-child {
     box-shadow: 0px 1px 17px rgba(0, 0, 0, 0.06);
     background: #fff;
+}
+
+@media screen and (max-width: 1200px) {
+    .chat {
+        width: 100%;
+        top: 0;
+        left: 0;
+        border-radius: 0;
+    }
 }
