--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -269,6 +269,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .controllerProduct {
@@ -303,4 +304,268 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
+}
+
+@media screen and (max-width: 1260px) {
+  .controllerProduct > button {
+    margin: 0 !important;
+  }
+  .costP > h3 {
+    font-size: 22px;
+  }
+  .costP > h4 {
+    font-size: 16px;
+  }
+  .buy > button {
+    padding: 12px 80px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 100%;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .characterisInfo {
+    justify-content: space-around;
+  }
+  .imageToSelect {
+    display: none;
+  }
+  .imageLike,
+  .addCart {
+    width: 36px;
+    height: 36px;
+  }
+  .imageLike > img {
+    width: 18px;
+    height: 18px;
+  }
+  .buy > button {
+    padding: 10px 70px;
+  }
+  .buy > .addCart {
+    width: 46px;
+    height: 46px;
+  }
+  .addCart > img {
+    width: 18px;
+    height: 18px;
+  }
+  .characterSide {
+    width: 60%;
+    align-items: center;
+    display: flex;
+  }
+  .characterSide > div {
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .characterisInfo {
+    flex-wrap: wrap;
+  }
+  .selectMemory {
+    width: fit-content;
+    gap: 0.5rem;
+  }
+  .costSide {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+  }
+  .memory {
+    border-radius: 10px;
+  }
+  .memoryd {
+    border-radius: 10px;
+  }
+  .costTop {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    background: transparent;
+    gap: 1rem;
+  }
+  .cost {
+    background: #fff;
+    padding: 12px;
+    border-radius: 10px;
+  }
+  .buy {
+    margin-top: 0;
+    width: auto;
+    background: #fff;
+    padding: 12px;
+    border-radius: 10px;
+    gap: 1rem;
+  }
+  .buy > button {
+    padding: 10px 50px;
+  }
+  .cartBottom {
+    display: flex;
+    gap: 1rem;
+    width: 50%;
+    justify-content: space-between;
+  }
+  .cart {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 0;
+    padding: 15px;
+    height: auto;
+    font-size: 16px;
+  }
+  .cart:first-child {
+    width: 120%;
+  }
+  .costP > h3 {
+    font-size: 19px;
+  }
+  .cart > img {
+    width: 33px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .characterSide {
+    width: 50%;
+  }
+  .detailS {
+    gap: 0;
+    justify-content: space-between;
+  }
+  .productWrapper {
+    gap: 1.3%;
+    row-gap: 1rem;
+  }
+  .productWrapper > a:last-child{
+    display: none;
+  }
+  .selected,
+  .select {
+    border-radius: 10px !important;
+    padding: 15px 30px;
+    font-size: 17px;
+  }
+  .costSide {
+    justify-content: space-evenly;
+  }
+  .cartBottom,
+  .cart,
+  .costTop,
+  .cost,
+  .buy {
+    width: fit-content;
+  }
+  .hole > img:first-child {
+    width: 300px;
+    height: auto;
+  }
+  .hole > img:last-child {
+    width: 50px;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .costSide {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+
+@media screen and (max-width: 850px) {
+  .selectedImage > img {
+    width: 250px;
+    height: auto;
+  }
+  .memory {
+    border-radius: 10px;
+    width: 100px;
+    height: 50px;
+    font-size: 16px;
+  }
+  .characterSide {
+    justify-content: flex-end;
+  }
+  .characterInfoLeft > p, .characterInfoRight > p {
+    font-size: 14px !important;
+  }
+  .characterInfo {
+    margin: 0 !important;
+  }
+  .memoryd {
+    border-radius: 10px;
+    width: 100px;
+    height: 50px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .characterSide {
+    width: fit-content;
+  } 
+  .detailS {
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  .info > p {
+    font-size: 14px;
+  } 
+  .productWrapper > a:nth-child(3){
+    display: none;
+  }
+  .characterisInfo {
+    gap: 1rem;
+  }
+} 
+
+@media screen and (max-width: 510px) {
+  .productWrapper > a:nth-child(2){
+    display: none;
+  }
+  .costTop, .cartBottom  {
+    flex-direction: column;
+    width: 100%;
+  }
+  .cost, .buy, .cart {
+    width: 100% !important;
+    justify-content: center;
+    align-items: center;
+  }
+  .selectMemory {
+    margin: auto;
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .characterInfo {
+    gap: 0.5rem;
+  }
+  .characterInfo p {
+    font-size: 13px !important;
+  }
+  .hole > img:first-child {
+    width: 200px !important;
+    height: auto;
+  }
+  .select, .selected {
+    padding: 10px 25px;
+    font-size: 16px;
+  }
 }
