--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -9,7 +9,7 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 1180px;
 }
 
 .container a {
@@ -42,12 +42,20 @@
     gap: 10px;
 }
 
+@media screen and (max-width:1200px) {
+    .container {
+        width: 100%;
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .footer {
-        width: fit-content;
+        width: 100%;
     }
     .container {
-        width: fit-content;
+        width: 100%;
         display: flex;
         flex-direction: column;
         gap: 1rem;
