--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -68,6 +68,18 @@
   display: none;
 }
 
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 100%;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+  .ads {
+    margin-left: 20px;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .ads {
     margin-left: 0;
@@ -82,6 +94,9 @@
 
   .contraLeft > select {
     display: none;
+  }
+  .search {
+    width: 55%;
   }
 }
 
