--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -9,15 +9,13 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 1180px;
 }
 
 .container a {
     color: #8A8A8A;
     font-size: 16px;
 }
-
-
 
 .logo {
     text-transform: uppercase;
@@ -41,7 +39,6 @@
 
 .last {
     display: flex;
-    /* align-items: center; */
     gap: 10px;
     flex-direction: column;
 }
