--- a/styles/profileBurger.module.css
+++ b/styles/profileBurger.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 30%;
     width: 280px;
-    height: 106px;
+    height: 170px;
     background: #FFFFFF;
     border-radius: 20px;
     box-shadow: 0px 5px 20px 10px rgba(163, 162, 162, 0.19);
@@ -54,6 +54,7 @@
 }
 
 .profileClose {
+    cursor: pointer;
     display: flex;
     align-items: center;
     margin-top: 19px;
