--- a/styles/selectCategory.module.css
+++ b/styles/selectCategory.module.css
@@ -2,13 +2,23 @@
     padding: 10px 5px;
     position: absolute;
     display: flex;
-    margin-top: 280px;
+    top: 180px;
     width: 1180px;
     height: 193px;
     background-color: #ffffff;
     border-radius: 20px;
     box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
     z-index: 999;
+    transition: .4s;
+}
+
+.dn {
+    display: none;
+    opacity: 0 !important;
+    width: 0;height: 0;
+    justify-content: center;
+    align-items: center;
+    transition: .4s;
 }
 
 .categorLeft {
@@ -22,7 +32,7 @@
     padding-left: 5px;
     display: flex;
     align-items: center;
-    transition: .5s ease-in-out;
+    transition: .4s;
 }
 
 .categorLeft h1{
@@ -67,15 +77,42 @@
     font-weight: 700;
 }
 
+@media screen and (max-width:1200px) {
+    .selectCategory {
+        width: 100%;
+    }
+}
+
 @media screen and (max-width:1180px) {
     .selectCategory {
-        width: 1000px;
+        width: 100%;
     }
 }
 
 @media screen and (max-width:768px) {
     .selectCategory {
         width: 97%;
+    }
+
+    .table {
+        gap: 100px;
+    }
+}
+
+
+@media screen and (max-width:590px) {
+    .selectCategory {
+        width: 96%;
+    }
+
+    .table {
+        gap: 50px;
+    }
+}
+
+@media screen and (max-width:570px) {
+    .table {
+        gap: 30px;
     }
 }
 
