--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,29 +40,8 @@
 }
 
 .addLeft > img {
-  position: absolute;
-  left: 50%;
-}
-
-.controller {
-  position: absolute;
-  top: 90%;
-  left: 43%;
-  display: flex;
-  justify-content: space-between;
-  gap: 5px;
-}
-
-.circle {
-  height: 18px;
-  width: 18px;
-  border: 1px solid #fff;
-  border-radius: 50px;
-  cursor: pointer;
-}
-
-.circle:first-child {
-  background: #fff !important;
+  position: relative;
+  /* left: -20%; */
 }
 
 .cart {
@@ -93,18 +72,20 @@
 }
 
 .cat {
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 10px;
   background: #fff !important;
   padding: 20px 30px;
+  margin-right: 0 !important;
   border-radius: 20px;
+  width: 23.1% !important;
 }
 
 .catTop {
-  border: 1px solid #8a8a8a;
+  border: 1px solid #d6d6d6;
   width: 110px;
   height: 110px;
   display: flex;
@@ -140,8 +121,9 @@
   cursor: pointer;
 }
 
-.swiperL {
+.swiperL > div {
   display: flex;
+  gap: 2.7% !important;
 }
 
 .catControl:last-child {
@@ -160,7 +142,7 @@
 
 .newsWrapper {
   display: flex;
-  gap: 1.7%;
+  gap: 1.65%;
   flex-wrap: wrap;
 }
 
@@ -191,6 +173,278 @@
 }
 
 
+.allCategoriy__section {
+  align-items: center;
+  width: 1180px;
+  padding: 10px 0;
+  margin: auto;
+}
+
+.allCategoriy__section h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 160%;
+}
+
+.navigation {
+  width: 1180px;
+  display: flex;
+  align-items: center;
+  height: 65px;
+  background-color: #ffffff;
+  gap: 49px;
+  box-shadow: 0px 1px 10px 1px rgba(214, 214, 214, 0.19);
+  border-radius: 25px;
+  justify-content: center;
+  margin-top: 31px;
+}
+
+.nav {
+  border-bottom: 3px solid #ffffff;
+  height: 65px;
+  font-weight: 700;
+  padding-top: 15px;
+  cursor: pointer;
+}
+
+.navigation button {
+  padding: 10px 20px;
+  border: 1px solid #e4b717;
+  filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
+  border-radius: 50px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 160%;
+  color: #e4b717;
+}
+
+.cards {
+  padding: 19px 31px;
+  margin-top: 21px;
+  width: 1180px;
+  height: 353px;
+  display: flex;
+  background: #ffffff;
+  border-radius: 20px;
+  justify-content: space-between;
+}
+
+.card__title {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.card__title p {
+  font-weight: 450;
+  font-size: 16px;
+  line-height: 160%;
+  color: #8a8a8a;
+}
+
+.card__title h1 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 160%;
+  color: #363636;
+}
+
+.description {
+  margin-top: 26px;
+}
+
+.description p {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 150%;
+  color: #363636;
+}
+
+.description p:nth-child(2) {
+  width: 335px;
+  font-weight: 450;
+  font-size: 16px;
+  line-height: 150%;
+  color: #8a8a8a;
+}
+
+.cards__button {
+  margin-left: 200px;
+}
+
+.cards__button button {
+  padding: 10px 20px;
+  border: 1px solid #e4b717;
+  filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
+  border-radius: 50px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 160%;
+  color: #e4b717;
+  transition: 0.5s ease-in-out;
+}
+
+.cards__button button:nth-child(2) {
+  padding: 11px 52px;
+  color: #ffffff;
+  margin-left: 10px;
+  background-color: #e4b717;
+}
+
+.cards__button button:hover {
+  transform: scale(0.9);
+}
+
+.carusel__card {
+  position: relative;
+  padding: 22px 12px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.carusel__card a {
+  width: 195.1px;
+  height: 228.49px;
+  background: #faf8f8;
+  border-radius: 20px;
+  padding: 10px 15px;
+}
+
+.carusel__card a h3 {
+  font-size: 17px;
+}
+
+.carusel__card a h4 {
+  font-size: 14px;
+}
+
+.carusel__card a div:nth-child(2) {
+  width: 37.81px;
+  height: 38.7px;
+}
+
+.carusel__card a div:last-child > img {
+  width: 17px;
+  height: 17px;
+}
+
+.controllerProduct {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.controllerProduct > button {
+  width: 43px;
+  height: 43px;
+  background: #fff;
+  box-shadow: 0px 1px 9px rgba(162, 162, 162, 0.25);
+  border-radius: 100px;
+  margin-left: -2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.carusel {
+  align-items: center;
+  gap: 15px;
+  justify-content: center;
+  display: flex;
+  width: 1180px;
+  padding: 10px 0;
+  margin: 57px auto;
+  color: #8a8a8a;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 160%;
+}
+
+.news {
+  padding: 17px 21px;
+  width: 380px;
+  height: 305px;
+  left: 370px;
+  top: 2451px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.28), rgba(0, 0, 0, 0.28)),
+    url("../public/images/businassman.png");
+  border-radius: 20px;
+}
+
+.news__card {
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  display: flex;
+}
+
+.news__months {
+  margin-left: 269px;
+  width: 59px;
+  height: 55px;
+  text-align: center;
+  padding-top: 9px;
+  background: #e4b717;
+  box-shadow: 0px 1px 17px rgba(27, 171, 227, 0.25);
+  border-radius: 10px;
+}
+
+.news__months p {
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.news__discrb {
+  margin-top: 100px;
+}
+
+.news__discrb p {
+  width: 328px;
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.news__discrb p:nth-child(2) {
+  margin-top: 13px;
+  width: 331px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: #c2c2c2;
+}
+
+.news__title {
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 160%;
+  color: #363636;
+}
+
+.carusel__card > a:nth-child(1) {
+  display: none;
+}
+
+.categories {
+  margin-top: 2rem;
+}
+
+.addItem {
+  width: 100% !important;
+}
+
+
+
+
 @media screen and (max-width: 1200px) {
   .container {
     width: 100%;
@@ -203,6 +457,90 @@
   .news {
     padding: 10px;
     border-radius: 10px;
+  }
+  .navigation {
+    display: none;
+  }
+  .cards {
+    width: 100%;
+  }
+  .carusel {
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .cards {
+    flex-direction: column;
+    height: fit-content;
+    padding: 10px;
+  }
+  .carusel__card > a:nth-child(1) {
+    display: flex;
+  }
+  .carusel__card > a {
+    width: 24%;
+  }
+  .description p:nth-child(2) {
+    width: auto;
+    margin-bottom: 1rem;
+  }
+  .cards__button {
+    width: auto;
+    align-items: flex-end;
+    display: flex;
+    margin-left: 0;
+    justify-content: flex-end;
+  }
+  .cards__button > button {
+    padding: 10px 20px !important;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .carusel__card > a {
+    width: 32%;
+  }
+  .carusel__card > a:nth-child(1) {
+    display: none;
+  }
+  .carusel__card > a {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .carusel__card > a:nth-child(2) {
+    display: none;
+  }
+  .carusel__card > a {
+    width: 49.1%;
+  }
+  .cat {
+    width: 32.7% !important;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .carusel__card > a:nth-child(3) {
+    display: none;
+  }
+  .carusel__card > a {
+    width: 100%;
+  }
+  .cards__button{
+    flex-direction: column;
+  }
+  .cards__button > button:last-child {
+    margin-left: 0;
+  }
+  .card__title {
+    flex-direction: column;
+    text-align: center;
+  }
+  .cat {
+    width: 52% !important;
   }
 }
 
@@ -234,11 +572,16 @@
     .addLeft > img {
       left: 25%;
     }
-    .categories {
-      display: none;
-    }
     .add {
       margin-bottom: 0;
+      height: auto;
+    }
+    .catTop {
+      width: 90px;
+      height: 90px;
+    }
+    .catTop > img {
+      width: 30px;
       height: auto;
     }
 }
