--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -467,11 +467,7 @@
   .buy {
     width: fit-content;
   }
-  .hole > img:first-child {
-    width: 300px;
-    height: auto;
-  }
-  .hole > img:last-child {
+  .hole > img {
     width: 50px;
     height: auto;
   }
@@ -531,6 +527,11 @@
   }
   .characterisInfo {
     gap: 1rem;
+  }
+  .hole > video {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 } 
 
