--- a/styles/head.module.css
+++ b/styles/head.module.css
@@ -77,6 +77,7 @@
   cursor: pointer;
   align-items: center;
   gap: 10px;
+  color: #000;
   font-weight: 700;
   font-size: 17px;
   display: flex;
