--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -41,7 +41,14 @@
 .selectedImage {
   background: #fff;
   border-radius: 20px;
-  padding: 20px 15px;
+  width: 100%;
+  height: 100%;
+}
+
+.selectedImage > img {
+  width: 353px;
+  height: auto;
+  margin: auto;
 }
 
 .imagesToSelect {
@@ -110,6 +117,7 @@
 
 .costSide {
   width: 28%;
+  margin-top: 1rem;
 }
 
 .costTop {
@@ -332,9 +340,6 @@
 @media screen and (max-width: 1180px) {
   .characterisInfo {
     justify-content: space-around;
-  }
-  .imageToSelect {
-    display: none;
   }
   .imageLike,
   .addCart {
@@ -568,5 +573,12 @@
   .select, .selected {
     padding: 10px 25px;
     font-size: 16px;
+  }
+  .imagesToSelect {
+    gap: 1rem;
+  }
+  .imageToSelect > img {
+    width: 50px;
+    height: auto;
   }
 }
