--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -5,26 +5,30 @@
     width: 23.725%;
     height: 331px;
     border-radius: 20px;
-    justify-content: space-between;
+    justify-content: center;
     gap: 2px;
     position: relative;
     padding: 10px 20px;
     cursor: pointer;
 }
 
+.card > a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
 
 .like {
     position: absolute;
     top: 5%;
     left: 77%;
-    width: 46px;
-    height: 46px;
-    border-radius: 50%;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #179AE4;
 }
 
 .card > img {
