--- a/styles/selectCategory.module.css
+++ b/styles/selectCategory.module.css
@@ -29,6 +29,7 @@
 }
 
 .categorLeft  div {
+    width: 100%;
     padding-left: 5px;
     display: flex;
     align-items: center;
@@ -48,6 +49,7 @@
     color: #FFFFFF;
     background-color: #E4B717;
     border-radius: 15px;
+    width: 100%;
 }
 
 .categorSection {
@@ -99,24 +101,25 @@
     }
 }
 
-
-@media screen and (max-width:590px) {
+@media  screen and (max-width: 700px) {
     .selectCategory {
-        width: 96%;
+        width: 58%;
     }
 
     .table {
-        gap: 50px;
+        display: none;
+    }
+
+    .categorLeft h1{
+        font-size: 15px;
+    }
+
+    .categorLeft {
+        border: none;
     }
 }
 
-@media screen and (max-width:570px) {
-    .table {
-        gap: 30px;
-    }
-}
-
-@media screen and (max-width:480px) {
+/* @media screen and (max-width:480px) {
     .selectCategory {
         height: 185px;
         width: 96%;
@@ -140,7 +143,7 @@
 @media screen and (max-width:380px) {
     .selectCategory {
         height: 180px;
-        width: 60%;
+        width: 70%;
     }
 
     .table {
@@ -157,4 +160,4 @@
     }
 
 
-}
+} */
