--- a/styles/delivery.module.css
+++ b/styles/delivery.module.css
@@ -1,461 +1,119 @@
-.cart {
+.delivery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 1180px;
+  gap: 4rem;
+}
+
+.container > h2 {
+  font-size: 23px;
+}
+
+.article {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.articleTitle {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.articleTitle > h3 {
+  font-size: 20px;
+}
+
+.articleTitle > p {
+  color: #888;
+  line-height: 22.4px;
+}
+
+.quests {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.quest {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 40px;
+  border-radius: 20px;
+  background: #fff;
+}
+
+.quest h3 {
+  font-size: 16px;
+}
+
+.quest p {
+  color: #888;
+}
+
+.quest img {
+  width: 17px;
+  height: 10px;
+}
+
+.questTop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dn {
+  height: 0;
+  z-index: -1000;
+  transition: 0.05s ease-in-out;
+  text-align: center;
+  opacity: 0;
+}
+
+.just {
+  transition: 0.3s ease-in-out;
+  margin-top: 1rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 100%;
+    padding: 0 1%;
+  }
+  .deliver > img {
+    width: 400px;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .article {
+    flex-direction: column;
     display: flex;
-    width: 1180px;
-    padding: 10px 0;
-    margin: auto;
-}
-
-.card * h1 {
-    color: #000;
-}
-
-.DeliverySection {
-    gap: 12.5px;
+    gap: 1rem;
+  }
+  .deliver {
+    width: 100%;
     display: flex;
-    width: 1180px;
-    padding: 10px 0;
-    margin: auto;
-}
-
-
-.card {
-    margin-top: 7px;
-    padding: 24px 37px;
-    width: 880px;
-    height: 157px;
-    background-color: #fff;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    line-height: 160%;
-}
-
-
-.count {
-    padding-top: 50px;
-}
-
-.input {
-    width: 21.47px;
-    height: 21.47px;
-}
-
-.countButton {
-    width: 111px;
-    height: 37px;
-    gap: 16px;
-    display: flex;
-    align-items: center;
-    background: #FAF8F8;
-    border-radius: 20px;
     justify-content: center;
-    font-weight: 700;
-    font-size: 18px;
-}
-
-.countButton button {
-    color: #9B9B9B;
-    justify-content: center;
     align-items: center;
-    font-weight: 400;
-    font-size: 35px;
-    background: none;
-    border: none;
+  }
+  .quest {
+    padding: 5% 4%;
+    border-radius: 10px;
+  }
 }
-
-.remove {
-    align-items: center;
-    justify-content: flex-end;
-    display: flex;
-    gap: 7px;
-}
-
-.remove>p {
-    color: #9B9B9B;
-}
-
-
-.menu h1 {
-    color: #363636;
-    font-weight: 700;
-    font-size: 21px;
-}
-
-.menu label {
-    font-weight: 450;
-    font-size: 16px;
-    color: #B7AFAF;
-}
-
-.menu p {
-    font-weight: 450;
-    font-size: 16px;
-    color: #363636;
-}
-
-.countPrice h1 {
-    padding-top: 57px;
-    font-size: 23px;
-    font-weight: 700;
-}
-
-.allPrice {
-    margin-top: 7px;
-    width: 292px;
-    height: 271px;
-    background: #FFFFFF;
-    border-radius: 20px;
-    padding: 17px 28px;
-}
-
-.allPrice h1 {
-    font-weight: 700;
-    font-size: 21px;
-}
-
-.allPrice button {
-    cursor: pointer;
-    margin-top: 12px;
-    padding: 12px 84px;
-    background: none;
-    border: 1px solid #E4B717;
-    filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
-    border-radius: 50px;
-    font-weight: 700;
-    font-size: 17px;
-    color: #E4B717;
-    transition: .5s ease;
-}
-
-.allPrice button:active {
-    transform: scale(1.1);
-}
-
-.allPrice label {
-    font-weight: 400;
-    font-size: 18px;
-    color: #888888;
-}
-
-
-.allPrice p {
-    font-weight: 400;
-    font-size: 18px;
-    color: #363636;
-
-}
-
-
-
-@media screen and (max-width:1180px) {
-    .cart {
-        display: flex;
-        width: 100%;
-        padding: 10px 12px;
-    }
-
-    .DeliverySection {
-        display: flex;
-        gap: 100px;
-        width: 100%;
-        padding: 10px 12px;
-    }
-
-    .card {
-        width: 100%;
-    }
-}
-
-
-@media screen and (max-width:1200px) {
-    .cart {
-        display: flex;
-        width: 100%;
-        padding: 10px 12px;
-    }
-
-    .DeliverySection {
-        justify-content: space-between;
-        align-items: center;
-        display: block;
-    }
-
-
-    .menu p {
-        font-weight: 450;
-        font-size: 13px;
-        color: #363636;
-    }
-
-
-    .menu label {
-        font-weight: 450;
-        font-size: 15px;
-        color: #B7AFAF;
-    }
-
-
-    .menu h1 {
-        color: #363636;
-        font-weight: 700;
-        font-size: 19px;
-    }
-
-    .countPrice h1 {
-        padding-top: 57px;
-        font-size: 21px;
-        font-weight: 700;
-    }
-
-    .right {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-    }
-
-}
-
-
-@media screen and (max-width:768px) {
-    .cart {
-        display: flex;
-        width: 100%;
-        padding: 10px 12px;
-    }
-
-    .DeliverySection {
-        justify-content: space-between;
-        align-items: center;
-        display: block;
-        width: 100%;
-        padding: 10px 12px;
-    }
-
-    .card {
-        width: 100%;
-    }
-
-
-    .menu p {
-        font-weight: 450;
-        font-size: 13px;
-        color: #363636;
-    }
-
-
-    .menu label {
-        font-weight: 450;
-        font-size: 15px;
-        color: #B7AFAF;
-    }
-
-
-    .menu h1 {
-        color: #363636;
-        font-weight: 700;
-        font-size: 19px;
-    }
-
-    .countPrice h1 {
-        padding-top: 57px;
-        font-size: 21px;
-        font-weight: 700;
-    }
-
-
-}
-
-
-@media screen and (max-width:700px) {
-    .DeliverySection {
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .cart {
-        display: flex;
-        width: 100%;
-        padding: 10px 12px;
-    }
-
-
-    .menu p {
-        font-weight: 450;
-        font-size: 10px;
-        color: #363636;
-    }
-
-
-    .menu label {
-        font-weight: 450;
-        font-size: 12px;
-        color: #B7AFAF;
-    }
-
-
-    .menu h1 {
-        color: #363636;
-        font-weight: 700;
-        font-size: 16px;
-    }
-
-    .countPrice h1 {
-        padding-top: 57px;
-        font-size: 17px;
-        font-weight: 700;
-    }
-
-
-    .count p:nth-child(1) {
-        display: none;
-    }
-
-    .DeliverySection h1 {
-        font-size: 18px;
-    }
-
-    .countPrice h1 {
-        font-size: 15px;
-    }
-
-    .countButton {
-        margin-top: -40px;
-        margin-left: 20px;
-        position: absolute;
-        font-size: 16px;
-    }
-
-}
-
-@media screen and (max-width:480px) {
-    .cart {
-        width: 100%;
-    }
-
-    .DeliverySection {
-        justify-content: space-between;
-        align-items: center;
-        display: block;
-        width: 100%;
-    }
-
-    .card {
-        margin-top: 7px;
-        padding: 24px 10px;
-        width: 100%;
-    }
-
-    .count p:nth-child(1) {
-        display: none;
-    }
-
-    .DeliverySection h1 {
-        font-size: 18px;
-    }
-
-    .countPrice h1 {
-        font-size: 15px;
-    }
-
-    .countButton {
-        margin-top: -40px;
-        margin-left: 20px;
-        position: absolute;
-        font-size: 16px;
-    }
-
-    .menu label {
-        font-weight: 450;
-        font-size: 12px;
-        color: #B7AFAF;
-    }
-
-    .menu h1 {
-        color: #363636;
-        font-weight: 700;
-        font-size: 19px;
-    }
-
-    .menu p {
-        font-weight: 450;
-        font-size: 12px;
-        color: #363636;
-    }
-
-    .allPriceBurgerg {
-        display: none;
-    }
-
-    .sectionLeft {
-        width: 100%;
-    }
-
-    .right {
-        justify-content: center;
-        align-items: center;
-    }
-
-    .allPrice {
-        align-items: center;
-        justify-content: center;
-    }
-
-}
-
-
-@media screen and (max-width:380px) {
-    .cart {
-        width: 100%;
-    }
-
-
-
-    .DeliverySection h1 {
-        font-size: 16px;
-    }
-
-    .countPrice h1 {
-        font-size: 12px;
-    }
-
-    .countButton {
-        margin-top: -40px;
-        position: absolute;
-        font-size: 14px;
-    }
-
-    .countButton {
-        width: 75px;
-        height: 30px;
-    }
-
-    .menu label {
-        font-weight: 450;
-        font-size: 9px;
-        color: #B7AFAF;
-    }
-
-    .menu h1 {
-        color: #363636;
-        font-weight: 700;
-        font-size: 15px;
-    }
-
-    .menu p {
-        font-weight: 450;
-        font-size: 9px;
-        color: #363636;
-    }
-
-    .allPrice {
-        margin-left: 6.5%;
-        display: block;
-    }
-
-    .input {
-        width: 20px;
-        height: 20px;
-    }
-
+@media screen and (max-width: 420px) {
+  .deliver > img {
+    width: 100%;
+  }
 }
