--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -57,7 +57,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .authForm > input {
@@ -91,6 +91,11 @@
     margin-top: 2rem;
     font-size: 18px;
     font-weight: 700;
+}
+
+.auth > button {
+  font-size: 20px;
+  margin-top: 1rem;
 }
 
 @media screen and (max-width: 1180px) {
