--- a/styles/head.module.css
+++ b/styles/head.module.css
@@ -138,7 +138,10 @@
     padding-right: 1%;
   }
   .ads {
-    margin-left: 20px;
+    margin-left: 0px;
+  }
+  .call {
+    display: none;
   }
 }
 
@@ -158,7 +161,7 @@
     display: none;
   }
   .search {
-    width: 55%;
+    width: 48%;
   }
 }
 
