--- a/styles/categories.module.css
+++ b/styles/categories.module.css
@@ -28,8 +28,28 @@
   user-select: none;
 }
 
+.close {
+  background-color: #e4b717;
+  display: flex;
+  justify-content: space-between;
+  border: none;
+  padding: 8px 20px;
+  border-radius: 50px;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  user-select: none;
+  transition: .20s ease-in-out;
+}
+
+.close > h3 {
+  color: #fff;
+  font-size: 18px;
+}
+
 .categ>h3 {
   font-size: 18px;
+  color: #E4B717;
 }
 
 .selectList {
