--- a/styles/categories.module.css
+++ b/styles/categories.module.css
@@ -12,7 +12,7 @@
   width: 1180px;
   padding: 12px 0;
   display: flex;
-  justify-content: space-between;
+  gap: 1rem;
   align-items: center;
 }
 
