--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -89,7 +89,8 @@
 
 .selectMemory {
   display: flex;
-  justify-content: space-between;
+  margin-top: 1rem;
+  gap: 0.5rem;
   align-items: center;
 }
 
@@ -210,6 +211,7 @@
 .video {
   width: 100%;
   margin-top: 2rem;
+  height: auto;
 }
 
 .hole {
@@ -220,6 +222,11 @@
   width: 100%;
   background: #000;
   border-radius: 30px;
+}
+
+.hole > video {
+  height: 450px;
+  width: auto;
 }
 
 .selectDetail {
@@ -312,6 +319,11 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
+}
+
+.imageToSelect > img {
+  width: 70px;
+  height: auto;
 }
 
 @media screen and (max-width: 1260px) {
