--- a/styles/selectCategory.module.css
+++ b/styles/selectCategory.module.css
@@ -4,7 +4,6 @@
     display: flex;
     top: 175px;
     width: 1180px;
-    height: 193px;
     background-color: #ffffff;
     border-radius: 20px;
     box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
@@ -30,7 +29,6 @@
     font-size: 18px;
     font-weight: 700;
     border-right: 1px solid #cacaca;
-    width: 200px;
     padding: 5px;
 }
 
@@ -40,6 +38,10 @@
     display: flex;
     align-items: center;
     transition: .4s;
+}
+
+.categorRight {
+    margin-left: 1rem;
 }
 
 .categorLeft h1{
@@ -56,17 +58,11 @@
     background-color: #E4B717;
     border-radius: 15px;
     width: 100%;
+    transition: 0.2s linear;
 }
 
 .categorSection {
     display: flex;
-}
-
-.categorRight {
-    justify-content: center;
-    height: 10px;
-    align-items: center;
-    padding: 10px;
 }
 
 .table {
@@ -90,6 +86,7 @@
 @media screen and (max-width:1200px) {
     .selectCategory {
         width: 100%;
+        margin-left: -1%;
     }
 }
 
@@ -100,9 +97,6 @@
 }
 
 @media screen and (max-width:768px) {
-    .selectCategory {
-        width: 97%;
-    }
 
     .table {
         gap: 100px;
@@ -110,10 +104,6 @@
 }
 
 @media  screen and (max-width: 700px) {
-    .selectCategory {
-        width: 58%;
-    }
-
     .table {
         display: none;
     }
@@ -121,51 +111,4 @@
     .categorLeft h1{
         font-size: 15px;
     }
-
-    .categorLeft {
-        border: none;
-    }
 }
-
-/* @media screen and (max-width:480px) {
-    .selectCategory {
-        height: 185px;
-        width: 96%;
-    }
-
-    .table {
-        gap: 20px;
-        font-size: 13px;
-    }
-
-    .categorLeft h1{
-        font-size: 15px;
-        font-weight: 600;
-        padding: 10px 12px;
-        border: none;
-        background: none;
-    }
-    
-}
-
-@media screen and (max-width:380px) {
-    .selectCategory {
-        height: 180px;
-        width: 70%;
-    }
-
-    .table {
-        display: none;
-    }
-
-    .categorLeft h1{
-        font-size: 15px;
-    }
-
-
-    .categorLeft {
-        border: none;
-    }
-
-
-} */
